k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-cms
  labels:
    app.kubernetes.io/part-of: blog-cms
