k8s/08-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-cms-postgresql
  namespace: blog-cms
spec:
  selector:
    app: blog-cms-postgresql
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
