k8s/10-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-cms-backend
  namespace: blog-cms
spec:
  selector:
    app: blog-cms-backend
  ports:
    - port: 4000
      targetPort: 4000
