k8s/12-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-cms-frontend
  namespace: blog-cms
spec:
  selector:
    app: blog-cms-frontend
  ports:
    - port: 80
      targetPort: 80
