k8s/13-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-cms-ingress
  namespace: blog-cms
spec:
  ingressClassName: nginx
  rules:
    - host: blog.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blog-cms-backend
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-cms-frontend
                port:
                  number: 80
